# Gamessis-OS

./: .clang-format  .clang-tidy  .clangd  .gdb_history  .gdbinit  .gdbinit.swp  .gitignore  CMakeLists.txt  Makefile  Makefile copy 2  README.md  bochsout.txt  bochsrc.bxrc  bx_enh_dbg.ini  calltree.dot  calltree.txt  clock.c  clock.s  com.c  devdrv.h  devman.c  elf.h  exe.c  exe.h  framebuffer.c  gdb.sh  gdt.c  gdt.h  gen_inthandler.py  img.s  int.c  int.s  kb.h  knl.lds  knl.s  knl.sh  ksyms  lds.lds  libc.sym.txt  log.txt  (+23 more)
.cache/clangd/index/: blk_buf.c.8A96436B951F37F1.idx  blk_buf.h.0E153AA899DB42F7.idx  blk_dev.c.36607E47CAAE658D.idx  blk_dev.h.8729AD5D606843D4.idx  clock.c.63F0806700FEB08C.idx  clock.h.8EBB359CAEEFABC2.idx  com.c.8DFA8AD3ADC7C5E2.idx  com.h.CBCE20621C20144D.idx  devman.c.5DB86D77846DBD38.idx  devman.h.A51EA92DF24C963F.idx  dirent.h.5B316B9DA3DA5BC8.idx  disk.c.30B6AEEB8F7AE99A.idx  disk.h.124B2DB7575324A3.idx  elf.h.FBA16AA6DE5047FF.idx  errno.h.50B6917CAAA1A749.idx  exe.c.A693E3F87323943E.idx  exe.h.0D9B30BC0DDFB5E5.idx  fat32.c.17694F2B006C1856.idx  fat32.h.147921A5AC02D934.idx  fcntl.h.E7424EB67C3EEF39.idx  framebuffer.c.7C79599E2D7C3BD7.idx  framebuffer.h.D880ED0C4F4C0F07.idx  gdt.c.F90C9390AB6CB434.idx  gdt.h.ECEC118ABA0E8B8D.idx  int.c.C17A8583BBD0B1B5.idx  int.h.17CF6B5E0F262509.idx  kb.c.0D2233E65481254C.idx  kb.h.674A1816F7D0D564.idx  log.c.EFCDBAAE2E3319F7.idx  log.h.E27B5A0B8D94257C.idx  main.c.8AFE4CF079B5D815.idx  mem.c.E0BD34ED15CE0254.idx  mem.h.F12B212258F97CB8.idx  memory.c.76E214D88E08435F.idx  memory.h.C2E95610094C3DA6.idx  mman.h.A3830C2566983E04.idx  multiboot2.h.43016BCADB9A870B.idx  page.h.BF56B043F591B38F.idx  pe.h.149D862D4FA0A708.idx  proc.c.5BCB8CD81953E105.idx  (+21 more)
arch/: Makefile  clock.c  float.s  gdt.c  gdt.s  int.c  int_handler.s
arch/loader/: loader.mk
boot/: boot.c
com/: Makefile  mem.c  str.c  syscall.c  types.c  wchar.c
dl/: dl.c  dl.h  dl.mk  dl.s
drivers/: Makefile  com.c  conhost.c  elfbin.c  framebuffer.c  kb.c  ramdisk.c  tty.c  tty.s
ext2/: super.c
fs/: Makefile  fat32.c  file_op.c  ramfs.c  vfs.c  volume.c
gui/: Makefile  wndman.c
include/: binload.h  blk_buf.h  blk_dev.h  calling.h  clock.h  com.h  console.h  context.inc  devdrv.h  devman.h  dirent.h  disk.h  driverman.h  drvload.h  elf.h  elfbin.h  exe.h  fat16.h  fat32.h  fcntl.h  fifo.h  float.h  framebuffer.h  gdt.h  int.h  ioctlarg.h  kb.h  ksym.h  kwchar.h  log.h  mem.h  memman.h  memory.h  page.h  pe.h  proc.h  ramdisk.h  ramfs.h  reloc.h  scanner.h  (+13 more)
include/c/: stddef.h  stdio.h  stdlib.h  string.h
include/c/_types/: _size_t.h
include/com/: mem.h  str.h
include/ext2/: ext2.h  fs.h  int-ll64.h  types.h
include/gms/: gms.h
include/sys/: mman.h  stat.h  types.h  unistd.h  wait.h
knl/: Makefile  binload.c  blk_buf.c  blk_dev.c  buddy.c  calling.s  clock.c  clock.s  com.c  devman.c  driverman.c  drvload.c  exe.c  fifo.c  float.c  framebuffer.c  gdt.c  gdt.s  gdtdefine.inc  int.c  int.s  int_handler.s  log.c  main.c  memory.c  proc.c  proc.s  ramdisk.c  ramfs.c  reloc.c  setup.s  setup64.s  signal.c  slab.c  sys.c  syscall.s  threading.c  vfs.c  virfs.c  virfs.c.bak  (+2 more)
knl/mods/: disk.c  disk.s  elfbin.c  ext2.c  ext2.c.bak  fat16.c  fat16.c.bak  fat32.c  kb.c  scanner.c  text_console.c.bak  tty.c
loader/: loader.lds  loader.mk  reloc.c  setup.s  setup64.s
mm/: Makefile  memory.c  slab.c
plpbt/: 1README.TXT  licence.txt
plpbt/Windows/: InstallToBootMenu.bat  InstallToMBR.bat
plpbt/doc/: liesmich.txt  readme.txt
subproj/binload/: CMakeLists.txt
test/: test.c  test.mk  test.s
tools/: int_template.s  ints.list
tools/kallsyms/: kallsyms.c  kallsyms.mk
unused/: blk_buf.c  blk_buf.h  blk_buf.h.gch  blk_dev.h  ksyms  memman.c  virfs.c.bak
usr/dl/: dl.lds  dl.mk  dl.s  dlinit.c
usr/test/: test.c  test.lds  test.mk  test.s
usr/usrlib/: Makefile  console.c  gen.py  lib.mk  libsignal.c  stdlib.c  syscallc.c  syscalls.asm  syscalls.list  template.s  unistd.c  wait.c
usrlib/: fcntl.c  lib.mk  mman.c  stdio.c  stdlib.c  unistd.c
usrlib/include/: signal.h
