cmake_minimum_required(VERSION 3.1)
project(gms)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c17 -pedantic")
add_compile_options(-w -g -no-pie -fno-pic -fno-stack-protector -I include -m64 -mcmodel=large -Wno-pointer-to-int-cast -Wno-int-conversion)
include_directories(include)
enable_language(ASM_NASM)
file(GLOB_RECURSE KNL_ASM knl/*.s)
message(STATUS ${KNL_ASM})
aux_source_directory(knl KNL)
aux_source_directory(knl/mods KNL_MODS)
# aux_source_directory(com KNL_COMS)
set(KNL_COMS com/str.c com/mem.c com/types.c)
SET(CMAKE_ASM_NASM_SOURCE_FILE_EXTENSIONS asm)  # 设置NASM的文件扩展名为asm
add_custom_target(gmsknl ALL make -C Makefile)
add_executable(gms ${KNL} ${KNL_ASM} ${KNL_MODS} ${KNL_COMS}
)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)