cmake_minimum_required(VERSION 3.1)
project(binload)
add_library(binload STATIC binload.c)
target_compile_options(binload PUBLIC -nostdlib -nostdinc -nostartfiles -nodefaultlibs -fno-stack-protector)
set_target_properties(binload PROPERTIES OUTPUT_NAME binload)
if(IN_KERNEL)
    message(STATUS "defined IN_KERNEL")
    target_compile_definitions(binload PUBLIC IN_KERNEL)
endif()
